force-app/main/default/objects/b3s__Certificate_Requirement__c/b3s__Certificate_Requirement__c.object-meta.xml
<CustomObject>
    <label>Certificate Requirement</label>
    <nameField>
        <displayFormat>CERT-REQ-{0}</displayFormat>
        <label>Certificate Requirement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Certificate Requirements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>