force-app/main/default/objects/b3s__Certificate_Requirement__c/fields/b3s__Account__c.field-meta.xml
<CustomField>
    <fullName>b3s__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Certificate Requirements</relationshipLabel>
    <relationshipName>Certificate_Requirements</relationshipName>
    <type>Lookup</type>
</CustomField>