force-app/main/default/objects/b3s__Certificate_Requirement__c/fields/b3s__Certificate_Type__c.field-meta.xml
<CustomField>
    <fullName>b3s__Certificate_Type__c</fullName>
    <label>Certificate Type</label>
    <referenceTo>b3o__Certificate_Type__c</referenceTo>
    <relationshipLabel>Certificate Requirements</relationshipLabel>
    <relationshipName>Certificate_Requirements</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>