force-app/main/default/objects/b3s__Certificate_Requirement__c/fields/b3s__Job_Type__c.field-meta.xml
<CustomField>
    <fullName>b3s__Job_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Type</label>
    <referenceTo>b3o__Job_Type__c</referenceTo>
    <relationshipLabel>Certificate Requirements</relationshipLabel>
    <relationshipName>Certificate_Requirements</relationshipName>
    <type>Lookup</type>
</CustomField>