force-app/main/default/objects/b3s__Certificate_Requirement__c/listViews/b3s__All.listView-meta.xml
<ListView>
    <fullName>b3s__All</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>